policy-tests/fixtures/compliant/pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: compliant-pod
  namespace: platform-system
  labels:
    app.kubernetes.io/name: compliant-pod
    app.kubernetes.io/part-of: k8s-platform-foundation
    app.kubernetes.io/managed-by: flux
spec:
  automountServiceAccountToken: false

  securityContext:
    runAsNonRoot: true
    seccompProfile:
      type: RuntimeDefault

  containers:
    - name: application
      image: nginx:1.27.4
      imagePullPolicy: IfNotPresent

      securityContext:
        allowPrivilegeEscalation: false
        capabilities:
          drop:
            - ALL
        readOnlyRootFilesystem: true

      resources:
        requests:
          cpu: 25m
          memory: 32Mi
        limits:
          cpu: 100m
          memory: 128Mi
