policy-tests/fixtures/noncompliant/host-namespace-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: host-namespace-pod
  namespace: platform-system
  labels:
    app.kubernetes.io/name: host-namespace-pod
    app.kubernetes.io/part-of: k8s-platform-foundation
    app.kubernetes.io/managed-by: flux
spec:
  hostNetwork: true
  hostPID: true

  containers:
    - name: application
      image: nginx:1.27.4
