policy-tests/fixtures/noncompliant/service-account-token-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: service-account-token-pod
  namespace: platform-system
  labels:
    app.kubernetes.io/name: service-account-token-pod
    app.kubernetes.io/part-of: k8s-platform-foundation
    app.kubernetes.io/managed-by: flux
spec:
  automountServiceAccountToken: true

  containers:
    - name: application
      image: nginx:1.27.4
