policy-tests/fixtures/noncompliant/writable-root-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: writable-root-pod
  namespace: platform-system
  labels:
    app.kubernetes.io/name: writable-root-pod
    app.kubernetes.io/part-of: k8s-platform-foundation
    app.kubernetes.io/managed-by: flux
spec:
  securityContext:
    runAsNonRoot: true
    seccompProfile:
      type: RuntimeDefault

  containers:
    - name: application
      image: nginx:1.27.4
      securityContext:
        allowPrivilegeEscalation: false
        capabilities:
          drop:
            - ALL
        readOnlyRootFilesystem: false
      resources:
        requests:
          cpu: 25m
          memory: 32Mi
        limits:
          cpu: 100m
          memory: 128Mi
